--- a/app/src/main/res/layout/activity_about_movie.xml
+++ b/app/src/main/res/layout/activity_about_movie.xml
@@ -85,10 +85,9 @@
                     android:layout_alignStart="@+id/releaseDateTextView"
                     android:layout_alignLeft="@+id/releaseDateTextView"
                     android:layout_marginTop="1dp"
-                    android:fontFamily="@font/proximanova_regular_webfont"
+                    android:fontFamily="@font/proximanova_semibold_webfont"
                     android:textColor="@android:color/white"
-                    android:textSize="22dp"
-                    android:textStyle="bold" />
+                    android:textSize="22dp"/>
 
                 <TextView
                     android:id="@+id/genreTextView"
