--- a/app/src/main/res/layout/horizontal_cardview_tvshows.xml
+++ b/app/src/main/res/layout/horizontal_cardview_tvshows.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="4dp"
             android:ellipsize="end"
-            android:fontFamily="@font/proximanova_regular_webfont"
+            android:fontFamily="@font/proximanova_semibold_webfont"
             android:gravity="left"
             android:maxLines="2"
             android:textColor="@color/text1" />
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tvShowNameTextView"
             android:layout_marginLeft="4dp"
+            android:layout_marginTop="2dp"
             android:fontFamily="@font/proximanova_regular_webfont"
             android:textColor="@color/subtext1"
             android:textSize="12sp" />
