--- a/app/src/main/res/layout/tvshow_cast_list_item_view.xml
+++ b/app/src/main/res/layout/tvshow_cast_list_item_view.xml
@@ -20,7 +20,8 @@
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@id/castIV"
         android:fontFamily="@font/proximanova_regular_webfont"
-        android:textColor="@color/text1" />
+        android:textColor="@color/text1"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/castCharacterTV"
