--- a/app/src/main/res/layout/acitivity_main_second_tvshows.xml
+++ b/app/src/main/res/layout/acitivity_main_second_tvshows.xml
@@ -6,11 +6,13 @@
 
     <TextView
         android:id="@+id/tvShowTypeTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="16dp"
+        android:layout_toStartOf="@+id/seeAllTextView"
         android:fontFamily="@font/proximanova_semibold_webfont"
         android:textColor="@color/text1"
         android:textSize="20sp" />
@@ -20,11 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvShowTypeTextView"
-        android:fontFamily="@font/proximanova_regular_webfont"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/subtext1"
         android:layout_marginEnd="16dp"
-        android:padding="8dp"/>
+        android:fontFamily="@font/proximanova_regular_webfont"
+        android:padding="8dp"
+        android:textColor="@color/subtext1" />
 
 
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvShowTypeTextView"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="18dp"
         android:orientation="horizontal" />
 
 </RelativeLayout>
