--- a/app/src/main/res/layout/activity_main_second.xml
+++ b/app/src/main/res/layout/activity_main_second.xml
@@ -6,11 +6,13 @@
 
     <TextView
         android:id="@+id/movieTypeTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="16dp"
+        android:layout_toStartOf="@+id/seeAllTextView"
         android:fontFamily="@font/proximanova_semibold_webfont"
         android:textColor="@color/text1"
         android:textSize="20sp" />
@@ -32,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/movieTypeTextView"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="18dp"
         android:orientation="horizontal" />
 
 
