--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/searchContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,9 +26,9 @@
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:searchIcon="@android:color/transparent"
             android:layout_marginEnd="16dp"
-            android:iconifiedByDefault="false" />
+            android:iconifiedByDefault="false"
+            android:searchIcon="@android:color/transparent" />
 
         <FrameLayout
             android:id="@+id/searchback_container"
@@ -49,33 +48,31 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/resultsContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/resultsContainer"
         android:layout_marginTop="?android:actionBarSize"
-        android:elevation="4dp" >
+        android:elevation="4dp">
 
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="64dp"
-            android:paddingBottom="64dp"
-            android:visibility="gone"
             android:indeterminate="true"
             android:indeterminateTint="?android:colorAccent"
-            android:indeterminateTintMode="src_in" />
+            android:indeterminateTintMode="src_in"
+            android:paddingTop="64dp"
+            android:paddingBottom="64dp"
+            android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/searchResultsRV"
             android:layout_width="match_parent"
-            android:visibility="gone"
             android:layout_height="match_parent"
-            android:padding="@dimen/spacing"
-            android:scrollbars="vertical"
             android:scrollbarStyle="outsideOverlay"
-            android:clipToPadding="false"/>
+            android:scrollbars="vertical"
+            android:visibility="gone" />
 
-        </FrameLayout>
+    </FrameLayout>
 
 </FrameLayout>
