--- a/app/src/main/res/layout/review_list_item_view.xml
+++ b/app/src/main/res/layout/review_list_item_view.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginRight="16dp"
     android:elevation="2dp"
-    app:cardCornerRadius="0dp"
+    app:cardCornerRadius="2dp"
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
 
@@ -57,14 +57,14 @@
             android:layout_below="@+id/reviewSubheadingTV"
             android:layout_alignParentStart="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
             android:ellipsize="end"
+            android:textColor="@color/text1"
             android:fontFamily="@font/proximanova_regular_webfont"
             android:lineSpacingExtra="2.5dp"
             android:maxLines="9"
-            android:minLines="1"
-            android:textSize="14sp" />
+            android:minLines="1"/>
 
         <TextView
             android:id="@+id/readMoreTV"
