--- a/app/src/main/res/layout/see_all_content_movies.xml
+++ b/app/src/main/res/layout/see_all_content_movies.xml
@@ -23,11 +23,7 @@
         android:id="@+id/seeAllActivityRecyclerViewMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/spacing"
-        android:scrollbars="vertical"
         android:scrollbarStyle="outsideOverlay"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" />
-
+        android:scrollbars="vertical" />
 
 </FrameLayout>
